fixing layout issues

--- a/public/src/app/app.component.css
+++ b/public/src/app/app.component.css
@@ -2,8 +2,10 @@
   display: flex;
   height: auto;
   width: 100vw;
+  max-width: 100vw;
   margin: 0;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 
