--- a/public/src/app/main-content/footer/footer.component.css
+++ b/public/src/app/main-content/footer/footer.component.css
@@ -7,6 +7,7 @@
   text-align: center;
   background-color: black;
   border-top: 1px solid #fff;
+  min-height: 600px;
 }
 
 .row {
@@ -64,7 +65,7 @@ i {
 
 @media only screen and (max-width: 370px){
   .full-width-component {
-    height: 70vh;
+    height: auto;
   }
 
   .column {
@@ -89,7 +90,7 @@ i {
 
 @media only screen and (min-width: 371px){
   .full-width-component {
-    height: 70vh;
+    height: auto;
   }
 
   .column {
