--- a/public/src/styles.css
+++ b/public/src/styles.css
@@ -4,6 +4,7 @@ html {
   box-sizing: border-box;
   max-width: 100vw;
   margin: 0;
+  overflow-x: hidden;
 }
 
 *,
@@ -19,6 +20,7 @@ body {
   padding: 0px;
   margin: 0px;
   font-family: delicious;
+  overflow-x: hidden;
 }
 
 .spin {
